# cpp_env_check

./: .gitignore  CMakeLists.txt
include/: EnvCheck.hh
src/: EnvCheck.cc
test/: CMakeLists.txt  EnvCheckTest.cc
